# benchmax-py

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
benchmax/: BenchmaxException.py  __main__.py  benchmarks.py  cli.py  jobs.py  options.py
benchmax/backends/: backends.py  local.py  slurm.py
benchmax/inspection/: data.py  inspection.py  load.py  plots.py
benchmax/results/: CSVWriter.py  Result.py  Results.py  XMLWriter.py
benchmax/tools/: CDD.py  Redlog.py  SMTRAT.py  Tool.py  Z3.py  cvc5.py  tools.py
examples/: example.csv  inspection-example.ipynb
