[metadata]
name = benchmax
version = 0.0.1
url = TODO
download_url = TODO
project_urls =
    Bug Tracker = TODO
    Documentation = TODO
    Source Code = TODO
author = The authors of benchmax
license = GPL
license_file = LICENSE
description = A benchmarking utility
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    gprof2dot>=2019.11
    importlib-metadata>=1.7 ; python_version<"3.8"
    tqdm>=4.6
python_requires = >=3.6
scripts =
    bin/benchmax

[options.entry_points]
console_scripts =
    benchmax = benchmax:__main__.main
